--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="contact-form">
+        <h2>Contact Us</h2>
+        <form action="./contact.html" method="post">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name"
+                name="name" required><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email"
+                name="email" required><br><br>
+            <input type="submit" value="submit">
+        </form>
+    </div>
     <div class="box-container">
         <div class="box"></div>
         <div class="box"></div>
